# bktree-leveldb

./: .gitignore  .travis.yml  BKTree.h  CMakeLists.txt  Helper.h  LICENSE  LevenshteinDistance.h  README.md  circle.yml  main.cpp
src/: BKTree.h  CachePolicy.h  ChildrenKeyPolicy.h  Helper.h  OverwriteRootKeyPolicy.h
test/: .gitignore  CMakeLists.txt  test.cpp
